--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         </nav>
         <ul class="auth-list list">
           <!-- email -->
-          <li class="auth-item">
+          <li class="auth-item icon-mail">
             <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <!-- Phone -->
-          <li class="auth-item">
+          <li class="auth-item icon-phone">
             <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -64,25 +64,25 @@
         <div class="container">
           <h2 class="visually-hidden">Особенности</h2>
           <ul class="specifics-list list">
-            <li class="specifics-item">
+            <li class="specifics-item icon-antena">
               <h3 class="specifics-title title">Внимание к деталям</h3>
               <p>
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li class="specifics-item">
+            <li class="specifics-item icon-clock">
               <h3 class="specifics-title title">Пунктуальность</h3>
               <p>
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li class="specifics-item">
+            <li class="specifics-item icon-diagram">
               <h3 class="specifics-title title">Планирование</h3>
               <p>
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li class="specifics-item">
+            <li class="specifics-item icon-astronaut">
               <h3 class="specifics-title title">Современные технологии</h3>
               <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
@@ -129,8 +129,16 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-worker title">Игорь Демьяненко</h3>
-              <p class="team-description">Product Designer</p>
+              <div class="worker-info">
+                <h3 class="team-worker title">Игорь Демьяненко</h3>
+                <p class="team-description">Product Designer</p>
+                <ul class="social-list list">
+                  <li class="social-item instagram"><a href=""></a></li>
+                  <li class="social-item twitter"><a href=""></a></li>
+                  <li class="social-item facebook"><a href=""></a></li>
+                  <li class="social-item linkedin"><a href=""></a></li>
+                </ul>
+              </div>
             </li>
             <li class="item">
               <img
@@ -140,8 +148,16 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-worker title">Ольга Репина</h3>
-              <p class="team-description">Frontend Developer</p>
+              <div class="worker-info">
+                <h3 class="team-worker title">Ольга Репина</h3>
+                <p class="team-description">Frontend Developer</p>
+                <ul class="social-list list">
+                  <li class="social-item instagram"><a href=""></a></li>
+                  <li class="social-item twitter"><a href=""></a></li>
+                  <li class="social-item facebook"><a href=""></a></li>
+                  <li class="social-item linkedin"><a href=""></a></li>
+                </ul>
+              </div>
             </li>
             <li class="item">
               <img
@@ -151,8 +167,16 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-worker title">Николай Тарасов</h3>
-              <p class="team-description">Marketing</p>
+              <div class="worker-info">
+                <h3 class="team-worker title">Николай Тарасов</h3>
+                <p class="team-description">Marketing</p>
+                <ul class="social-list list">
+                  <li class="social-item instagram"><a href=""></a></li>
+                  <li class="social-item twitter"><a href=""></a></li>
+                  <li class="social-item facebook"><a href=""></a></li>
+                  <li class="social-item linkedin"><a href=""></a></li>
+                </ul>
+              </div>
             </li>
             <li class="item">
               <img
@@ -162,8 +186,42 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-worker title">Михаил Ермаков</h3>
-              <p class="team-description">UI Designer</p>
+              <div class="worker-info">
+                <h3 class="team-worker title">Михаил Ермаков</h3>
+                <p class="team-description">UI Designer</p>
+                <ul class="social-list list">
+                  <li class="social-item instagram"><a href=""></a></li>
+                  <li class="social-item twitter"><a href=""></a></li>
+                  <li class="social-item facebook"><a href=""></a></li>
+                  <li class="social-item linkedin"><a href=""></a></li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Clients -->
+      <section class="clients section">
+        <div class="container">
+          <h2 class="clients-title section-title title">Постоянные клиенты</h2>
+          <ul class="clients-list list">
+            <li class="clients-item company-1">
+              <a href="" target="_blank" rel="noopener noreferrer"></a>
+            </li>
+            <li class="clients-item company-2">
+              <a href="" target="_blank" rel="noopener noreferrer"></a>
+            </li>
+            <li class="clients-item company-3">
+              <a href="" target="_blank" rel="noopener noreferrer"></a>
+            </li>
+            <li class="clients-item company-4">
+              <a href="" target="_blank" rel="noopener noreferrer"></a>
+            </li>
+            <li class="clients-item company-5">
+              <a href="" target="_blank" rel="noopener noreferrer"></a>
+            </li>
+            <li class="clients-item company-6">
+              <a href="" target="_blank" rel="noopener noreferrer"></a>
             </li>
           </ul>
         </div>
