Copy project with edits

--- a/index.html
+++ b/index.html
@@ -36,16 +36,18 @@
             <li class="nav-item">
               <a class="link" href="./portfolio.html">Портфолио</a>
             </li>
+
             <li class="nav-item"><a class="link" href="">Контакты</a></li>
           </ul>
         </nav>
         <ul class="auth-list list">
           <!-- email -->
-          <li class="auth-item icon-mail">
+          <li class="auth-item">
             <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
+
           <!-- Phone -->
-          <li class="auth-item icon-phone">
+          <li class="auth-item">
             <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -63,26 +65,29 @@
       <section class="specifics section">
         <div class="container">
           <h2 class="visually-hidden">Особенности</h2>
-          <ul class="specifics-list list">
-            <li class="specifics-item icon-antena">
+          <ul class="specifics-list list card-set">
+            <li class="specifics-item card-item">
               <h3 class="specifics-title title">Внимание к деталям</h3>
               <p>
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li class="specifics-item icon-clock">
+
+            <li class="specifics-item card-item">
               <h3 class="specifics-title title">Пунктуальность</h3>
               <p>
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li class="specifics-item icon-diagram">
+
+            <li class="specifics-item card-item">
               <h3 class="specifics-title title">Планирование</h3>
               <p>
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li class="specifics-item icon-astronaut">
+
+            <li class="specifics-item card-item">
               <h3 class="specifics-title title">Современные технологии</h3>
               <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
@@ -93,8 +98,8 @@
       <section class="preview section">
         <div class="container">
           <h2 class="section-title title">Чем мы занимаемся</h2>
-          <ul class="preview-list list">
-            <li class="item">
+          <ul class="preview-list list card-set">
+            <li class="item card-item">
               <img
                 src="./images/webstudio/work1.jpg"
                 alt="разработка интерфейса"
@@ -102,10 +107,12 @@
                 height="294"
               />
             </li>
-            <li class="item">
+
+            <li class="item card-item">
               <img src="./images/webstudio/work2.jpg" alt="дизайн" width="370" height="294" />
             </li>
-            <li class="item">
+
+            <li class="item card-item">
               <img
                 src="./images/webstudio/work3.jpg"
                 alt="написание кода"
@@ -116,112 +123,71 @@
           </ul>
         </div>
       </section>
+
       <!-- Our team -->
       <section class="team section">
         <div class="container">
           <h2 class="section-title title">Наша команда</h2>
-          <ul class="team-list list">
-            <li class="item">
-              <img
-                class="photo"
-                src="./images/webstudio/product_designer.jpg"
-                alt="Дизайнер"
-                width="270"
-                height="260"
-              />
-              <div class="worker-info">
+          <ul class="team-list list card-set">
+            <li class="item card-item">
+              <div class="card-thumb">
+                <img
+                  src="./images/webstudio/product_designer.jpg"
+                  alt="Дизайнер"
+                  width="270"
+                  height="260"
+                />
+              </div>
+
+              <div class="card-text">
                 <h3 class="team-worker title">Игорь Демьяненко</h3>
                 <p class="team-description">Product Designer</p>
-                <ul class="social-list list">
-                  <li class="social-item instagram"><a href=""></a></li>
-                  <li class="social-item twitter"><a href=""></a></li>
-                  <li class="social-item facebook"><a href=""></a></li>
-                  <li class="social-item linkedin"><a href=""></a></li>
-                </ul>
               </div>
             </li>
-            <li class="item">
-              <img
-                class="photo"
-                src="./images/webstudio/frontend_developer.jpg"
-                alt="Фронт Енд"
-                width="270"
-                height="260"
-              />
-              <div class="worker-info">
+
+            <li class="item card-item">
+              <div class="card-thumb">
+                <img
+                  src="./images/webstudio/frontend_developer.jpg"
+                  alt="Фронт Енд"
+                  width="270"
+                  height="260"
+                />
+              </div>
+              <div class="card-text">
                 <h3 class="team-worker title">Ольга Репина</h3>
                 <p class="team-description">Frontend Developer</p>
-                <ul class="social-list list">
-                  <li class="social-item instagram"><a href=""></a></li>
-                  <li class="social-item twitter"><a href=""></a></li>
-                  <li class="social-item facebook"><a href=""></a></li>
-                  <li class="social-item linkedin"><a href=""></a></li>
-                </ul>
               </div>
             </li>
-            <li class="item">
-              <img
-                class="photo"
-                src="./images/webstudio/marketing.jpg"
-                alt="Маркетинг"
-                width="270"
-                height="260"
-              />
-              <div class="worker-info">
+
+            <li class="item card-item">
+              <div class="card-thumb">
+                <img
+                  src="./images/webstudio/marketing.jpg"
+                  alt="Маркетинг"
+                  width="270"
+                  height="260"
+                />
+              </div>
+              <div class="card-text">
                 <h3 class="team-worker title">Николай Тарасов</h3>
                 <p class="team-description">Marketing</p>
-                <ul class="social-list list">
-                  <li class="social-item instagram"><a href=""></a></li>
-                  <li class="social-item twitter"><a href=""></a></li>
-                  <li class="social-item facebook"><a href=""></a></li>
-                  <li class="social-item linkedin"><a href=""></a></li>
-                </ul>
               </div>
             </li>
-            <li class="item">
-              <img
-                class="photo"
-                src="./images/webstudio/ui_designer.jpg"
-                alt="Юай дизайнер"
-                width="270"
-                height="260"
-              />
-              <div class="worker-info">
+
+            <li class="item card-item">
+              <div class="card-thumb">
+                <img
+                  src="./images/webstudio/ui_designer.jpg"
+                  alt="Юай дизайнер"
+                  width="270"
+                  height="260"
+                />
+              </div>
+              <div class="card-text">
                 <h3 class="team-worker title">Михаил Ермаков</h3>
                 <p class="team-description">UI Designer</p>
-                <ul class="social-list list">
-                  <li class="social-item instagram"><a href=""></a></li>
-                  <li class="social-item twitter"><a href=""></a></li>
-                  <li class="social-item facebook"><a href=""></a></li>
-                  <li class="social-item linkedin"><a href=""></a></li>
-                </ul>
               </div>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <!-- Clients -->
-      <section class="clients section">
-        <div class="container">
-          <h2 class="clients-title section-title title">Постоянные клиенты</h2>
-          <ul class="clients-list list">
-            <li class="clients-item company-1">
-              <a href="" target="_blank" rel="noopener noreferrer"></a>
-            </li>
-            <li class="clients-item company-2">
-              <a href="" target="_blank" rel="noopener noreferrer"></a>
-            </li>
-            <li class="clients-item company-3">
-              <a href="" target="_blank" rel="noopener noreferrer"></a>
-            </li>
-            <li class="clients-item company-4">
-              <a href="" target="_blank" rel="noopener noreferrer"></a>
-            </li>
-            <li class="clients-item company-5">
-              <a href="" target="_blank" rel="noopener noreferrer"></a>
-            </li>
-            <li class="clients-item company-6">
-              <a href="" target="_blank" rel="noopener noreferrer"></a>
             </li>
           </ul>
         </div>
@@ -233,6 +199,7 @@
         <a class="footer-logo link logo" href="./index.html"
           >Web<span class="logo-white">Studio</span></a
         >
+
         <!-- Address -->
         <address class="address">
           <ul class="list address-list">
