--- a/portfolio.html
+++ b/portfolio.html
@@ -52,155 +52,164 @@
       </div>
     </header>
     <main>
-      <section class="portfolio container section">
-        <h1 class="visually-hidden">Портфолио</h1>
-        <!-- filter -->
-        <ul class="filter-list list">
-          <li class="filter-item">
-            <button class="filter-button" type="button">Все</button>
-          </li>
-          <li class="filter-item">
-            <button class="filter-button" type="button">Веб-сайты</button>
-          </li>
-          <li class="filter-item">
-            <button class="filter-button" type="button">Приложения</button>
-          </li>
-          <li class="filter-item">
-            <button class="filter-button" type="button">Дизайн</button>
-          </li>
-          <li class="filter-item">
-            <button class="filter-button" type="button">Маркетинг</button>
-          </li>
-        </ul>
-        <!-- cards -->
-        <ul class="portfolio-list list">
-          <li class="portfolio-item">
-            <a
-              class="portfolio-link link"
-              href=""
-              target="_blank"
-              rel="noopener nofollow noreferrer"
-            >
-              <img src="./images/portfolio/tehnokryak.jpg" alt="" width="370" height="294" />
-            </a>
-            <div class="card-text">
-              <h2 class="portfolio-title title">Технокряк</h2>
-              <p>Веб-сайт</p>
-            </div>
-          </li>
-          <li class="portfolio-item">
-            <a
-              class="portfolio-link link"
-              href=""
-              target="_blank"
-              rel="noopener nofollow noreferrer"
-            >
-              <img src="./images/portfolio/new-orlean.jpg" alt="" width="370" height="294" />
+      <section class="portfolio section">
+        <div class="container">
+          <h1 class="visually-hidden">Портфолио</h1>
+          <!-- filter -->
+          <ul class="filter-list list">
+            <li class="filter-item">
+              <button class="filter-button" type="button">Все</button>
+            </li>
+            <li class="filter-item">
+              <button class="filter-button" type="button">Веб-сайты</button>
+            </li>
+            <li class="filter-item">
+              <button class="filter-button" type="button">Приложения</button>
+            </li>
+            <li class="filter-item">
+              <button class="filter-button" type="button">Дизайн</button>
+            </li>
+            <li class="filter-item">
+              <button class="filter-button" type="button">Маркетинг</button>
+            </li>
+          </ul>
+          <!-- cards -->
+          <ul class="portfolio-list list card-set">
+            <li class="portfolio-item card-item">
+              <a
+                class="portfolio-link link"
+                href=""
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+              >
+                <img src="./images/portfolio/tehnokryak.jpg" alt="" />
+              </a>
               <div class="card-text">
-                <h2 class="portfolio-title title">Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a
-              class="portfolio-link link"
-              href=""
-              target="_blank"
-              rel="noopener nofollow noreferrer"
-            >
-              <img src="./images/portfolio/seafood.jpg" alt="" width="370" height="294" />
-              <div class="card-text">
-                <h2 class="portfolio-title title">Ресторан Seafood</h2>
-                <p>Приложение</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a
-              class="portfolio-link link"
-              href=""
-              target="_blank"
-              rel="noopener nofollow noreferrer"
-            >
-              <img src="./images/portfolio/prime.jpg" alt="" width="370" height="294" />
-              <div class="card-text">
-                <h2 class="portfolio-title title">Проект Prime</h2>
-                <p>Маркетинг</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a
-              class="portfolio-link link"
-              href=""
-              target="_blank"
-              rel="noopener nofollow noreferrer"
-            >
-              <img src="./images/portfolio/boxes.jpg" alt="" width="370" height="294" />
-              <div class="card-text">
-                <h2 class="portfolio-title title">Проект Boxes</h2>
-                <p>Приложение</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a
-              class="portfolio-link link"
-              href=""
-              target="_blank"
-              rel="noopener nofollow noreferrer"
-            >
-              <img src="./images/portfolio/inspiration.jpg" alt="" width="370" height="294" />
-              <div class="card-text">
-                <h2 class="portfolio-title title">Inspiration has no Borders</h2>
+                <h2 class="portfolio-title title">Технокряк</h2>
                 <p>Веб-сайт</p>
               </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a
-              class="portfolio-link link"
-              href=""
-              target="_blank"
-              rel="noopener nofollow noreferrer"
-            >
-              <img src="./images/portfolio/limited-edition.jpg" alt="" width="370" height="294" />
-              <div class="card-text">
-                <h2 class="portfolio-title title">Издание Limited Edition</h2>
-                <p>Дизайн</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a
-              class="portfolio-link link"
-              href=""
-              target="_blank"
-              rel="noopener nofollow noreferrer"
-            >
-              <img src="./images/portfolio/lab.jpg" alt="" width="370" height="294" />
-              <div class="card-text">
-                <h2 class="portfolio-title title">Проект LAB</h2>
-                <p>Маркетинг</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a
-              class="portfolio-link link"
-              href=""
-              target="_blank"
-              rel="noopener nofollow noreferrer"
-            >
-              <img src="./images/portfolio/growing-business.jpg" alt="" width="370" height="294" />
-              <div class="card-text">
-                <h2 class="portfolio-title title">Growing Business</h2>
-                <p>Приложение</p>
-              </div>
-            </a>
-          </li>
-        </ul>
+            </li>
+
+            <li class="portfolio-item card-item">
+              <a
+                class="portfolio-link link"
+                href=""
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+              >
+                <img src="./images/portfolio/new-orlean.jpg" alt="" />
+                <div class="card-text">
+                  <h2 class="portfolio-title title">Постер New Orlean vs Golden Star</h2>
+                  <p>Дизайн</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="portfolio-item card-item">
+              <a
+                class="portfolio-link link"
+                href=""
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+              >
+                <img src="./images/portfolio/seafood.jpg" alt="" />
+                <div class="card-text">
+                  <h2 class="portfolio-title title">Ресторан Seafood</h2>
+                  <p>Приложение</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item card-item">
+              <a
+                class="portfolio-link link"
+                href=""
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+              >
+                <img src="./images/portfolio/prime.jpg" alt="" />
+                <div class="card-text">
+                  <h2 class="portfolio-title title">Проект Prime</h2>
+                  <p>Маркетинг</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="portfolio-item card-item">
+              <a
+                class="portfolio-link link"
+                href=""
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+              >
+                <img src="./images/portfolio/boxes.jpg" alt="" />
+                <div class="card-text">
+                  <h2 class="portfolio-title title">Проект Boxes</h2>
+                  <p>Приложение</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="portfolio-item card-item">
+              <a
+                class="portfolio-link link"
+                href=""
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+              >
+                <img src="./images/portfolio/inspiration.jpg" alt="" />
+                <div class="card-text">
+                  <h2 class="portfolio-title title">Inspiration has no Borders</h2>
+                  <p>Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="portfolio-item card-item">
+              <a
+                class="portfolio-link link"
+                href=""
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+              >
+                <img src="./images/portfolio/limited-edition.jpg" alt="" />
+                <div class="card-text">
+                  <h2 class="portfolio-title title">Издание Limited Edition</h2>
+                  <p>Дизайн</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="portfolio-item card-item">
+              <a
+                class="portfolio-link link"
+                href=""
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+              >
+                <img src="./images/portfolio/lab.jpg" alt="" />
+                <div class="card-text">
+                  <h2 class="portfolio-title title">Проект LAB</h2>
+                  <p>Маркетинг</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="portfolio-item card-item">
+              <a
+                class="portfolio-link link"
+                href=""
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+              >
+                <img src="./images/portfolio/growing-business.jpg" alt="" />
+                <div class="card-text">
+                  <h2 class="portfolio-title title">Growing Business</h2>
+                  <p>Приложение</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
