--- a/index.html
+++ b/index.html
@@ -42,12 +42,18 @@
         </nav>
         <ul class="auth-list list">
           <!-- email -->
-          <li class="auth-item">
+          <li class="auth-item mail">
+            <svg class="icon-mail">
+              <use href="./images/icons/icons.svg#icon-mail"></use>
+            </svg>
             <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
 
           <!-- Phone -->
-          <li class="auth-item">
+          <li class="auth-item phone">
+            <svg class="icon-phone">
+              <use href="./images/icons/icons.svg#icon-phone"></use>
+            </svg>
             <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -67,6 +73,16 @@
           <h2 class="visually-hidden">Особенности</h2>
           <ul class="specifics-list list card-set">
             <li class="specifics-item card-item">
+              <div class="specifics-icon">
+                <svg class="spec-svg">
+                  <use href="./images/icons/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
+              <!-- <button>
+                <svg>
+                  <use href="./images/icons/icons.svg#icon-antenna"></use>
+                </svg>
+              </button> -->
               <h3 class="specifics-title title">Внимание к деталям</h3>
               <p>
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
@@ -74,6 +90,11 @@
             </li>
 
             <li class="specifics-item card-item">
+              <div class="specifics-icon">
+                <svg class="spec-svg">
+                  <use href="./images/icons/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="specifics-title title">Пунктуальность</h3>
               <p>
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
@@ -81,6 +102,11 @@
             </li>
 
             <li class="specifics-item card-item">
+              <div class="specifics-icon">
+                <svg class="spec-svg">
+                  <use href="./images/icons/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="specifics-title title">Планирование</h3>
               <p>
                 Равным образом консультация с широким активом в значительной степени обуславливает.
@@ -88,6 +114,11 @@
             </li>
 
             <li class="specifics-item card-item">
+              <div class="specifics-icon">
+                <svg class="spec-svg">
+                  <use href="./images/icons/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="specifics-title title">Современные технологии</h3>
               <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
